# MyFirstDistributedSystem

./: CMakeLists.txt
Source/: CMakeLists.txt
Source/Communication/: Comunicator.cpp  Comunicator.h  LamportClock.cpp  LamportClock.h
Source/ResourceManagment/: AbstractStrategy.cpp  AbstractStrategy.h  ConsumableResourceStrategy.cpp  ConsumableResourceStrategy.h  ReceiveInvitation.h  RecieveInvitation.cpp  RenewableResourceStrategy.cpp  RenewableResourceStrategy.h  SendInvitation.cpp  SendInvitation.h
